--- a/my-weather/package.json
+++ b/my-weather/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
-    "next": "14.0.4",
+    "next": "^14.0.4",
+    "next.js": "^1.0.3",
     "react": "^18",
     "react-dom": "^18"
   },
