--- a/my-weather/package.json
+++ b/my-weather/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
-    "next": "^14.2.4",
+    "my-package": "^0.0.0",
+    "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.3"
