--- a/my-weather/package.json
+++ b/my-weather/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "eslint": "8.57.0",
+    "next": "^14.2.3",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
